Fix Align

--- a/css/style.css
+++ b/css/style.css
@@ -1074,7 +1074,6 @@ header.theme-menu-wrapper.menu-style-three.fixed #mega-menu-wrapper .nav>li>a {p
   height: 525px;
   position: absolute;
   top: 85px;
-  left: -135px;
   z-index: -1;
 }
 /*------------------------ Theme Counter --------------------*/
